@@ -46,7 +46,7 @@ namespace itpp
   \addtogroup audio
 */
 
-#if (defined(_MSC_VER) && defined(ITPP_SHARED_LIB) && !defined(itpp_EXPORTS))
+#if (defined(_MSC_VER) && defined(ITPP_SHARED_LIB) && !(defined(itpp_EXPORTS) || defined(itpp_debug_EXPORTS)))
 
 #ifndef ITPP_AUDIOFILE_EXCLUDED
 #define ITPP_AUDIOFILE_EXCLUDED
